[project]
name = "pony-comic-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "imgurpython>=1.1.7",
    "lxml>=6.1.1",
    "pillow>=12.3.0",
    "praw>=8.0.2",
    "pyperclip>=1.11.0",
    "python-resize-image>=1.1.20",
    "requests>=2.34.2",
]
